# OpenEnv-Hackathon

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  inference.py  openenv.yaml  pre_validation_script.py  pyproject.toml  requirements.txt  server.py
server/: Dockerfile  app.py
support_ops_env/: __init__.py  environment.py  graders.py  models.py  tasks.py
support_ops_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
