[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-ops-openenv"
version = "0.1.0"
description = "A real-world OpenEnv customer support operations environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "openenv-core[core]>=0.2.1",
    "openai>=1.68.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["support_ops_env", "server"]
